<resources>
    <string name="app_name">Self Helpher</string>
    <string name="subselect_main_text">4 Pillars of life</string>
    <string name="subselect_main_text2">make them stronger with ours course</string>


    <string name="health">health</string>
    <string name="wealth">wealth</string>
    <string name="love">love</string>
    <string name="happiness">happiness</string>


    <string name="enroll">Enroll</string>
    <string name="cancel_enrollment">cancel Enrollment</string>

    <string name="add_course">Add course</string>

    <string name="sign_out">sign out</string>

    <string name="delete">delete</string>

    <string name="setting">setting</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="widget_button">Show Me Report Card</string>
    <string name="configure">Configure</string>

    <string name="enrollment">ENROLLMENT</string>

    <string name="This_Course_is_already_in_database">You all ready enroll in this Course</string>

    <string name="nointenet_message">without internet we can not serve you</string>

    <string name="youtube_player_done">Initialization youtube player Success</string>

    <string name="successfully_enrolled">successfully enrolled</string>
    <string name="some_problem_occur">some problem occur</string>

    <string name="youtube_problem">problem occur in video initializing</string>



</resources>
