<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bhatt.selfhelpher.SubSelect">

    <TextView
        android:id="@+id/sub_select_maintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:foregroundGravity="center_horizontal"
        android:text="@string/subselect_main_text"
        android:layout_marginTop="@dimen/Text_margin_top"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/sub_select_maintext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sub_select_maintext"
        android:layout_marginTop="5dp"
        android:text="@string/subselect_main_text2"
        android:textSize="18dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/health_textview"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/health"
                />

            <TextView
                android:id="@+id/wealth_textview"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:text="@string/wealth"
                android:gravity="center"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/love_textview"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:text="@string/love"
                android:gravity="center"/>

            <TextView
                android:id="@+id/happiness_textview"
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:text="@string/happiness"
                android:gravity="center"/>

        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="140dp"
        android:layout_centerInParent="true"
        android:background="#DDDD00"
        ></LinearLayout>


    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:background="#DDDD00"></LinearLayout>

</RelativeLayout>
